vlib/v/checker/tests/i64_to_f64_implicit_cast_err.out
vlib/v/checker/tests/i64_to_f64_implicit_cast_err.vv:5:9: error: cannot use `i64` as type `f64` in return argument
    3 | fn returns_f64() f64 {
    4 |     value := i64(9_223_372_036_854_775_000)
    5 |     return value
      |            ~~~~~
    6 | }
    7 |
vlib/v/checker/tests/i64_to_f64_implicit_cast_err.vv:11:11: error: cannot assign to `result`: expected `f64`, not `i64`
    9 |     value := i64(9_223_372_036_854_775_000)
   10 |     mut result := f64(0)
   11 |     result = value
      |              ~~~~~
   12 |     takes_f64(value)
   13 |     _ = result
vlib/v/checker/tests/i64_to_f64_implicit_cast_err.vv:12:12: error: cannot use `i64` as `f64` in argument 1 to `takes_f64`
   10 |     mut result := f64(0)
   11 |     result = value
   12 |     takes_f64(value)
      |               ~~~~~
   13 |     _ = result
   14 | }
